# opengl-tutorial

./: CMakeLists.txt  README.md  main.cpp
include/: GameState.hpp  Renderer.hpp
src/: Model.cpp  Renderer.cpp
